package com.fla.aol.inventory.system.product.valueobject;

public enum ProductType {
    BASIC_MATERIAL, ELECTRONICS, BOOKS
}
